--- a/src/pages/google-login/google-login.html
+++ b/src/pages/google-login/google-login.html
@@ -1,5 +1,4 @@
 <ion-content class="google"  >
-  <span>
     <br>
     <br>
     <br>
@@ -7,12 +6,8 @@
     <br>
     <br>
     <br>
-    <ion-chip>
-  <ion-avatar>
-    <ion-icon name="logo-google"></ion-icon>
-
-  </ion-avatar>
-  <ion-label>Sign In With Google</ion-label>
-</ion-chip>
-  </span>
+    <button color=skip no-padding-right style="text-align:center;width:70%;margin-left:15%;margin-top:40%;" class="login" ion-button>
+ <img  style="height:35px;width:35px;margin-left:10px;" src='../img/google.png'>
+      <span style="margin-left:5px;font-size:17px;font-weight:bolder;">Sign In With Google</span>
+      </button>
 </ion-content>
