--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -1,18 +1,33 @@
-<!--
-  Generated template for the IntroPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>intro</ion-title>
-  </ion-navbar>
-
+  <!--<ion-navbar>
+    <ion-title>Slides</ion-title>
+  </ion-navbar>-->
 </ion-header>
 
+<ion-content class="slide-page" style="background-color:#41AC9A ">
 
-<ion-content padding>
-
+  <ion-slides pager>
+    <ion-slide *ngFor="let slide of slides">
+      <ion-toolbar>
+        <!--<ion-buttons end>
+          <button ion-button color="primary">Skip</button>
+        </ion-buttons>-->
+      </ion-toolbar>
+      <img [src]="slide.image" class="slide-image"/>
+      <h2 class="slide-title" [innerHTML]="slide.title"></h2>
+      <p [innerHTML]="slide.description"></p>
+      <span (click)="go()"><img style="height:15%;" [src]="slide.ima" class="slide-image"/></span>
+      
+    </ion-slide>
+    <ion-slide>
+      <ion-toolbar>
+      </ion-toolbar>
+      <img src="assets/img/ica-slidebox-img-4.png" class="slide-image"/>
+      <h2 class="slide-title">Proceed ?</h2>
+      <button ion-button large clear icon-end color="light">
+        Continue
+        <ion-icon name="arrow-forward"></ion-icon>
+      </button>
+    </ion-slide>
+  </ion-slides>
 </ion-content>
