--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -24,7 +24,7 @@
       </ion-toolbar>
       <img src="assets/img/ica-slidebox-img-4.png" class="slide-image"/>
       <h2 class="slide-title">Proceed ?</h2>
-      <button ion-button large clear icon-end color="light">
+      <button (click)="continue();"  ion-button large clear icon-end color="light">
         Continue
         <ion-icon name="arrow-forward"></ion-icon>
       </button>
