--- a/src/pages/sign-up/sign-up.html
+++ b/src/pages/sign-up/sign-up.html
@@ -1,16 +1,30 @@
-<ion-content class="googl" padding>
+<ion-content class="googl" padding style="background:url('assets/img/signup.jpg')">
 <p style="text-align:center;">
 <img class="user_img"  src='assets/img/img.jpg'>
 <br>
 <br>
 <ion-list>
   <ion-item no-lines>
-    <ion-input type="text" placeholder="Username"></ion-input>
+    <ion-input type="text" placeholder="Name"></ion-input>
   </ion-item>
   <ion-item no-lines>
-    <ion-input type="text" placeholder="Username"></ion-input>
+    <ion-input type="text" placeholder="Age"></ion-input>
+  </ion-item>
+    <ion-item no-lines>
+    <ion-input type="text" placeholder="Contact No."></ion-input>
+  </ion-item> 
+   <ion-item no-lines>
+    <ion-input type="text" placeholder="Address"></ion-input>
+  </ion-item> 
+   <ion-item no-lines>
+    <ion-input type="text" placeholder="Aadhar Card No:"></ion-input>
+  </ion-item> 
+   <ion-item no-lines>
+    <ion-input type="text" placeholder="Email Id:"></ion-input>
   </ion-item>
 </ion-list>
+<br>
+<button color="login" ion-button round style="width:90%; height:60px;"><span style="font-size:25px;font-family:sans-serif;color:#112C38;font-weight:400;">Login Now</span></button>
 </p>
 
 </ion-content>
