GOOGLE LOGIN working

--- a/src/pages/google-login/google-login.html
+++ b/src/pages/google-login/google-login.html
@@ -1,4 +1,4 @@
-<ion-content class="google"  >
+<ion-content class="google" style="background: url('assets/img/signup.jpg');background-size:cover;"  >
     <br>
     <br>
     <br>
