--- a/src/pages/sign-up/sign-up.html
+++ b/src/pages/sign-up/sign-up.html
@@ -5,22 +5,22 @@
 <br>
 <ion-list>
   <ion-item no-lines>
-    <ion-input type="text" placeholder="Name"></ion-input>
+    <ion-input style="color:white;" type="text" placeholder="Name"></ion-input>
   </ion-item>
   <ion-item no-lines>
-    <ion-input type="text" placeholder="Age"></ion-input>
+    <ion-input style="color:white;" type="text" placeholder="Age"></ion-input>
   </ion-item>
     <ion-item no-lines>
-    <ion-input type="text" placeholder="Contact No."></ion-input>
+    <ion-input style="color:white;" type="text" placeholder="Contact No."></ion-input>
   </ion-item> 
    <ion-item no-lines>
-    <ion-input type="text" placeholder="Address"></ion-input>
+    <ion-input style="color:white;" type="text" placeholder="Address"></ion-input>
   </ion-item> 
    <ion-item no-lines>
-    <ion-input type="text" placeholder="Aadhar Card No:"></ion-input>
+    <ion-input style="color:white;" type="text" placeholder="Aadhar Card No:"></ion-input>
   </ion-item> 
    <ion-item no-lines>
-    <ion-input type="text" placeholder="Email Id:"></ion-input>
+    <ion-input style="color:white;" type="text" placeholder="Email Id:"></ion-input>
   </ion-item>
 </ion-list>
 <br>
