--- a/src/pages/medkit/medkit.html
+++ b/src/pages/medkit/medkit.html
@@ -1,3 +1,20 @@
-<ion-content padding>
+<ion-content padding style="background:#183650;">
+  <ion-card style="height:45%;background-color:#E5E8E9">
+  <ion-card-content>
+    <p style="text-align:center;">
+   <span style="font-size:50px;color:#183650"><strong>First Aid</strong></span><br><br>
+   <span style="color:#434445;font-size:27px;">The tips which can save your life</span> 
+    </p>
+  </ion-card-content>
+  <ion-item item-right></ion-item>
+</ion-card>
+<ion-card style="height:45%;background-color:#E5E8E9">
+  <ion-card-content>
+    <p style="text-align:center;">
+   <span style="font-size:50px;color:#183650"><strong>Help Me</strong></span><br><br>
+   <span style="color:#434445;font-size:27px;">The tips which can save your life</span> 
+    </p>
+  </ion-card-content>
+</ion-card>
 
 </ion-content>
