--- a/src/pages/google-login/google-login.html
+++ b/src/pages/google-login/google-login.html
@@ -4,6 +4,10 @@
     <br>
     <br>
     <br>
+     <button (click)="admin();" color=skip no-padding-right style="text-align:center;width:70%;margin-left:15%;margin-top:40%;" class="login" ion-button>
+ <img  style="height:35px;width:35px;margin-left:10px;" src='assets/img/google.png'>
+      <span style="margin-left:5px;font-size:17px;font-weight:bolder;">Admin</span>
+      </button>
     <br>
     <br>
     <button (click)="login();" color=skip no-padding-right style="text-align:center;width:70%;margin-left:15%;margin-top:40%;" class="login" ion-button>
