--- a/src/pages/contacts/contacts.html
+++ b/src/pages/contacts/contacts.html
@@ -1,3 +1,8 @@
-<ion-content padding>
-
+<ion-content style="background-color:#183650;">
+ <ion-input style="color:white;" type="text"  [(ngModel)]="contact" placeholder="Emergency Contacts"></ion-input>
+ <ion-input style="color:white;" type="text"  [(ngModel)]="contact1" placeholder="Emergency Contacts"></ion-input>
+ <ion-input style="color:white;" type="text"  [(ngModel)]="contact2" placeholder="Emergency Contacts"></ion-input>
+  <ion-input style="color:white;" type="text" [(ngModel)]="contact3" placeholder="Emergency Contacts"></ion-input>
+ <ion-input style="color:white;" type="text"  [(ngModel)]="contact4" placeholder="Emergency Contacts"></ion-input>
+<button color="skip" ion-button block style="width:90%;margin-left:5%;" (click)="add()">Add Contacts</button>
 </ion-content>
