--- a/src/pages/medkit/medkit.html
+++ b/src/pages/medkit/medkit.html
@@ -1,5 +1,5 @@
 <ion-content padding style="background:#183650;">
-  <ion-card style="background-color:#E5E8E9">
+  <ion-card (click)="grid()"  style="background-color:#E5E8E9">
   <ion-card-content>
     <p style="text-align:center;background-color: #E5E8E9">
    <span style="font-size:45px;color:#183650"><strong>First Aid</strong></span><br><br>
