--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,3 +1,18 @@
-<ion-content padding>
+<ion-content class="slide-page" style="background-color:#41AC9A ">
 
+  <ion-slides pager>
+    <ion-slide *ngFor="let slide of slides">
+      <img [src]="slide.image" class="slide-image"/>
+      <h2 class="slide-title" [innerHTML]="slide.title"></h2>
+      <p [innerHTML]="slide.description"></p>
+    </ion-slide>
+    <ion-slide>
+      <img src="assets/img/ica-slidebox-img-4.png" class="slide-image"/>
+      <h2 class="slide-title">Proceed ?</h2>
+      <button ion-button large clear icon-end color="light" (click)="continue();">
+        Continue
+        <ion-icon name="arrow-forward"></ion-icon>
+      </button>
+    </ion-slide>
+  </ion-slides>
 </ion-content>
