--- a/src/pages/grid/grid.html
+++ b/src/pages/grid/grid.html
@@ -1,22 +1,18 @@
 <ion-content padding style="background:#183650;">
-  <ion-card style="height:100%;width:100%;margin:0%;background-color:#E5E8E9" class="zzz">
-     <img (click)="clickme1();" style="height:25%;width: 40%;margin-left:2%;" src ="assets/img/1.png"/>
-     <img (click)="clickme2();" style="height:25%;width: 40%;margin-right:20%;" src ="assets/img/2.png"/>
-     <img (click)="clickme3();" style="height:25%;width: 40%;margin-left:40%;" src ="assets/img/3.png"/>
-     <img (click)="clickme4();" style="height:25%;width: 40%;margin-left:30%;" src ="assets/img/4.png"/>
-     <img (click)="clickme5();" style="height:25%;width: 40%;margin-left:10%;" src ="assets/img/5.png"/>
-     <img (click)="clickme6();" style="height:25%;width: 40%;margin-left:20%;" src ="assets/img/6.png"/>
-
-  <ion-card-content>
-    <p style="text-align:center;">
-   <span style="font-size:50px;color:#183650"><strong></strong></span><br><br>
-   <span style="color:#434445;font-size:27px;"></span> 
-   
-     
-    </p>
-  </ion-card-content>
-  <ion-item item-right></ion-item>
-</ion-card>
+ <ion-grid class="settings">
+  <ion-row class="row1">
+    <ion-col (click)="notification()" class="galler"><img class="notify" src="assets/img/1.png" /><br><span class="nnotify">NOTIFICATION</span></ion-col>
+    <ion-col (click)="feed()" class="galler" ><img  class="notify" src="assets/img/2.png" /><br><span class="nnotify">FEEDBACK</span></ion-col>
+ </ion-row>
+  <ion-row class="row3">
+    <ion-col (click)="aboutus()" class="galler"> <img  class="notify" src="assets/img/3.png" /><br><span class="nnotify">XYZ</span></ion-col>
+      <ion-col (click)="doRadio()" class="galler">  <img  class="notify" src="assets/img/4.png" /><br><span class="nnotify">LANGUAGE</span></ion-col>
+  </ion-row>
+  <ion-row class="row3">
+    <ion-col (click)="aboutus()" class="galler"> <img  class="notify" src="assets/img/5.png" /><br><span class="nnotify">ABOUT-US</span></ion-col>
+      <ion-col (click)="doRadio()" class="galler">  <img  class="notify" src="assets/img/6.png" /><br><span class="nnotify">LANGUAGE</span></ion-col>
+  </ion-row>
+</ion-grid> 
 
   
   
