--- a/src/pages/grid/grid.html
+++ b/src/pages/grid/grid.html
@@ -1,22 +1,18 @@
 <ion-content padding style="background:#183650;">
-  <ion-card style="height:100%;background-color:#E5E8E9" class="zzz2">
+  
  <ion-grid class="settings">
-  <ion-row class="row1">
-    <ion-col (click)="clickme1()" class="galler"><img class="notify" src="assets/img/1.png" /><br><span class="nnotify">FRACTURE</span></ion-col>
-    <ion-col (click)="clickme2()" class="galler" ><img  class="notify" src="assets/img/2.png" /><br><span class="nnotify">Snake-BITE</span></ion-col>
+  <ion-row>
+    <ion-card style=" width:43%;height:50%;background-color:#E5E8E9">
+    <ion-col (click)="clickme1()" class="galler"><img class="notify" src="assets/img/1.png" /><br><span padding class="nnotify"><strong>FRACTURE</strong></span></ion-col></ion-card>
+  <ion-card style="width:43%;height:50%;background-color:#E5E8E9">  <ion-col (click)="clickme2()" class="galler" ><img  class="notify" src="assets/img/2.png" /><br><span padding class="nnotify"><strong>Snake-BITE</strong></span></ion-col></ion-card>
  </ion-row>
-  <ion-row class="row3">
-    <ion-col (click)="clickme3()" class="galler"> <img  class="notify" src="assets/img/3.png" /><br><span class="nnotify">WOUNDS</span></ion-col>
-      <ion-col (click)="clickme4()" class="galler">  <img  class="notify" src="assets/img/4.png" /><br><span class="nnotify">BURNS</span></ion-col>
+  <ion-row>
+   <ion-card style="width:43%;height:50%;background-color:#E5E8E9"> <ion-col (click)="clickme3()" class="galler"> <img  class="notify" src="assets/img/3.png" /><br><span padding class="nnotify"><strong>WOUNDS</strong></span></ion-col></ion-card>
+    <ion-card style="width:43%;height:50%;background-color:#E5E8E9">  <ion-col (click)="clickme4()" class="galler">  <img  class="notify" src="assets/img/4.png" /><br><span padding class="nnotify"><strong>BURNS</strong></span></ion-col></ion-card>
   </ion-row>
-  <ion-row class="row3">
-    <ion-col (click)="clickme5()" class="galler"> <img  class="notify" src="assets/img/5.png" /><br><span class="nnotify">FEVER</span></ion-col>
-      <ion-col (click)="clickme6()" class="galler">  <img  class="notify" src="assets/img/6.png" /><br><span class="nnotify">HEAT-STROKE</span></ion-col>
+  <ion-row >
+  <ion-card style="width:43%;height:50%;background-color:#E5E8E9">  <ion-col (click)="clickme5()" class="galler"> <img  class="notify" src="assets/img/5.png" /><br><span padding class="nnotify"><strong>FEVER</strong></span></ion-col></ion-card>
+   <ion-card style="width:43%;height:50%;background-color:#E5E8E9">   <ion-col (click)="clickme6()" class="galler">  <img  class="notify" src="assets/img/6.png" /><br><span padding class="nnotify"><strong>HEAT-STROKE</strong></span></ion-col></ion-card>
   </ion-row>
 </ion-grid> 
-
-  
-  
-    
-  </ion-card>
 </ion-content>
