--- a/src/pages/wounds/wounds.html
+++ b/src/pages/wounds/wounds.html
@@ -1,18 +1,20 @@
-<!--
-  Generated template for the WoundsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>wounds</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
+<ion-content padding style="background:#183650;">
+  <ion-card (click)="clickme();"style=";background-color:#E5E8E9" class="zzz1">
+  <ion-card-content>
+    <p style="text-align:center;">
+   <span style="font-size:45px;font-family:Lucida Grande;color:#183650"><strong>SYMPTOMS</strong></span><br><br>
+   <img  style="height:60%  ; width:55% ; margin-left:60%; margin-bottom:0px;" src ="assets/img/Snake1.png"/>
+   <span style="color:#434445;font-size:27px;"></span> 
+    </p>
+  </ion-card-content>
+</ion-card>
+<ion-card style="height:45%;background-color:#E5E8E9" class="zzz">
+  <ion-card-content>
+    <p style="text-align:center;">
+   <span style="font-size:50px;color:#183650"><strong>REMEDIES</strong></span><br><br>
+   <span style="color:#434445;font-size:27px;"></span> 
+    </p>
+  </ion-card-content>
+</ion-card>
 
 </ion-content>
