--- a/src/pages/fracture/fracture.html
+++ b/src/pages/fracture/fracture.html
@@ -1,19 +1,21 @@
 <ion-content padding style="background:#183650;">
   <ion-card (click)="clickme();"style=";background-color:#E5E8E9" class="zzz1">
   <ion-card-content>
-    <p style="text-align:center;">
+    <!--<p style="text-align:center;">-->
    <span style="font-size:45px;font-family:Lucida Grande;color:#183650"><strong>SYMPTOMS</strong></span><br><br>
-   <img  style="height:60%  ; width:62% ; margin-left:60%; margin-bottom:0px;" src ="assets/img/fracture.jpg"/>
-   <span style="color:#434445;font-size:27px;"></span> 
-    </p>
+<ion-row style="font-family:arial;font-weight:400;font-size:25px;">   <ion-col><ul><li>Tenderness</li><li>Swelling</li><li>Creaky joints.</li></ul></ion-col>
+
+   <ion-col><img  style="height:60%  ; width:72% ; margin-left:30%; margin-bottom:0px;" src ="assets/img/fracture.png"/>
+    <!--</p>--></ion-col></ion-row>
   </ion-card-content>
 </ion-card>
 <ion-card style="height:45%;background-color:#E5E8E9" class="zzz">
-  <ion-card-content>
-    <p style="text-align:center;">
+  <ion-card-content style="padding:5px;">
+    <!--<p style="text-align:center;">-->
    <span style="font-size:50px;color:#183650"><strong>REMEDIES</strong></span><br><br>
-   <span style="color:#434445;font-size:27px;"></span> 
-    </p>
+   <ul style="font-family:arial;font-weight:400;font-size:20px;"><li>Be calm.</li><li>Immobilises affected area.</li><li>Apply ice pack.</li></ul>
+   <!--<span style="color:#434445;font-size:27px;"></span> -->
+    <!--</p>-->
   </ion-card-content>
 </ion-card>
 
