--- a/src/pages/medkit/medkit.html
+++ b/src/pages/medkit/medkit.html
@@ -5,7 +5,7 @@
    <span style="font-size:45px;color:#183650"><strong>First Aid</strong></span><br><br>
    <span style="color:#434445;font-size:27px;">The tips which can save your life</span> 
     </p>
-  <ion-item style="background:transparent;height:70px;"><ion-icon item-right style="font-size: 300%;color:#183650;max-height: 20px;" name="information-circle"></ion-icon></ion-item>
+  <ion-item style="background:transparent;height:70px;"><ion-icon (click)="i()" item-right style="font-size: 300%;color:#183650;max-height: 20px;" name="information-circle"></ion-icon></ion-item>
     
   </ion-card-content>
 </ion-card>
@@ -16,7 +16,7 @@
    <span style="color:#434445;font-size:27px;">The tips which can save your life</span> 
     </p>
     <!--{{this.lat}},{{this.long}}<br>{{this.con.n3}}<br>{{this.con.n5}}-->
-  <ion-item style="background:transparent;height:70px;"><ion-icon item-right style="font-size: 300%;color:#183650;max-height: 20px;" name="information-circle"></ion-icon></ion-item>
+  <ion-item style="background:transparent;height:70px;"><ion-icon (click)="io()" item-right style="font-size: 300%;color:#183650;max-height: 20px;" name="information-circle"></ion-icon></ion-item>
     
   </ion-card-content>
 </ion-card>
