--- a/src/pages/google-login/google-login.html
+++ b/src/pages/google-login/google-login.html
@@ -9,7 +9,7 @@
       <span style="margin-left:5px;font-size:17px;font-weight:bolder;">Admin</span>
       </button>
     <button (click)="login();" color=skip no-padding-right style="text-align:center;width:70%;margin-left:15%;margin-top:40%;" class="login" ion-button>
- <img  style="height:35px;width:35px;margin-left:10px;" src='assets/img/google.png'>
-      <span style="margin-left:5px;font-size:17px;font-weight:bolder;">Sign In With Google</span>
+ <img  style="height:35px;width:35px;" src='assets/img/google.png'>
+      <span style="margin-left:5px;font-size:14px;font-weight:bolder;">Sign In With Facebook</span>
       </button>
 </ion-content>
