--- a/src/pages/heat/heat.html
+++ b/src/pages/heat/heat.html
@@ -5,7 +5,7 @@
    <span style="font-size:45px;font-family:Lucida Grande;color:#183650"><strong>SYMPTOMS</strong></span><br><br>
 <ion-row style="font-family:arial;font-weight:400;font-size:25px;">   <ion-col><ul><li>Muscle weakness</li><li>Cramps</li><li>Shallow Breathing.</li></ul></ion-col>
 
-   <ion-col><img  style="height:60%  ; width:100% ; margin-left:30%; margin-bottom:0px;" src ="assets/img/heat-stroke.png"/>
+   <ion-col><img  style="height:60%  ; width:100% ; margin-left:30%; margin-bottom:0px;" src ="assets/img/HEAT-STROKE.png"/>
     <!--</p>--></ion-col></ion-row>
   </ion-card-content>
 </ion-card>
