--- a/src/pages/snake/snake.html
+++ b/src/pages/snake/snake.html
@@ -5,7 +5,7 @@
    <span style="font-size:45px;font-family:Lucida Grande;color:#183650"><strong>SYMPTOMS</strong></span><br><br>
 <ion-row style="font-family:arial;font-weight:400;font-size:25px;">   <ion-col><ul><li>Redness</li><li>Swelling</li><li>Bleeding</li></ul></ion-col>
 
-   <ion-col><img  style="height:60%  ; width:42% ; margin-left:60%; margin-bottom:0px;" src ="assets/img/snake1.png"/>
+   <ion-col><img  style="height:60%  ; width:42% ; margin-left:60%; margin-bottom:0px;" src ="assets/img/Snake1.png"/>
     <!--</p>--></ion-col></ion-row>
   </ion-card-content>
 </ion-card>
